--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,7 @@
 # syntax=docker/dockerfile:1
 
-FROM node:12.18.1
-ENV NODE_ENV=production
-WORKDIR /app
-COPY ["package.json", "package-lock.json*", "./"]
-RUN npm install --production
-COPY . .
-CMD [ "node", "server.js" ]
+FROM ubuntu
+
+RUN apt-get update
+
+CMD ["echo", "Hello World.....! from my first docker image"]
